--- a/conf/loot/upgrade_components.json
+++ b/conf/loot/upgrade_components.json
@@ -1,4 +1,4 @@
-{
+﻿{
 	"Armor upgrades": {
 		"All": {
 			"Insignias": {
@@ -252,7 +252,7 @@
 	},
 	"Inscriptions": {
 		"All": {
-			"Measure for measure (Highly salvageable)": false,
+			"Measure for measure (Highly salvageable)": true,
 			"Show me the money (Improved sale value)": false
 		},
 		"Offhand": {
@@ -327,13 +327,11 @@
 				"Fiery (Fire damage)": false,
 				"Icy (Cold damage)": false,
 				"Shocking (Lightning damage)": false,
-
 				"Barbed (Lengthens Bleeding duration on foes by 33%)": false,
 				"Cruel (Lengthens Deep Wound duration on foes by 33%)": false,
 				"Crippling (Lengthens Crippled duration on foes by 33%)": false,
 				"Heavy (Lengthens Weakness duration on foes by 33%)": false,
 				"Poisonous (Lengthens Poison duration on foes by 33%)": false,
-
 				"Furious (Double Adrenaline on hit - Chance 10%)": false,
 				"Sundering (Armor penetration +20% - Chance 20%)": false,
 				"Vampiric (Life Draining 3 Health regeneration -1)": false,
@@ -345,7 +343,6 @@
 				"Of Shelter (Armor +7 vs physical damage)": false,
 				"Of Warding (Armor +7 vs elemental damage)": false,
 				"Of Enchanting (Enchantments last 20% longer)": false,
-
 				"Of The Warrior": false,
 				"Of The Ranger": true,
 				"Of The Necromancer": true,
@@ -356,7 +353,6 @@
 				"Of The Assassin": false,
 				"Of The Paragon": false,
 				"Of The Dervish": false,
-
 				"Of Deathbane": false,
 				"Of Charrslaying": true,
 				"Of Trollslaying": true,
@@ -368,7 +364,6 @@
 				"Of Demon Slaying": false,
 				"Of Ogre Slaying": false,
 				"Of Dragon Slaying": false,
-
 				"Of Mastery (Item's attribute +1 - 20% chance while using skills)": false
 			}
 		},
@@ -378,12 +373,10 @@
 				"Fiery (Fire damage)": false,
 				"Icy (Cold damage)": false,
 				"Shocking (Lightning damage)": false,
-
 				"Barbed (Lengthens Bleeding duration on foes by 33%)": false,
 				"Crippling (Lengthens Crippled duration on foes by 33%)": false,
 				"Poisonous (Lengthens Poison duration on foes by 33%)": false,
 				"Silencing (Lengthens Dazed duration on foes by 33%)": false,
-
 				"Sundering (Armor penetration +20% - Chance 20%)": false,
 				"Vampiric (Life Draining 5 Health regeneration -1)": false,
 				"Zealous (Energy gain on hit: 1 Energy regeneration: -1)": false
@@ -394,7 +387,6 @@
 				"Of Shelter (Armor +7 vs physical damage)": false,
 				"Of Warding (Armor +7 vs elemental damage)": false,
 				"Of Enchanting (Enchantments last 20% longer)": false,
-
 				"Of The Warrior": false,
 				"Of The Ranger": true,
 				"Of The Necromancer": true,
@@ -405,7 +397,6 @@
 				"Of The Assassin": false,
 				"Of The Paragon": false,
 				"Of The Dervish": false,
-
 				"Of Deathbane": false,
 				"Of Charrslaying": true,
 				"Of Trollslaying": true,
@@ -417,7 +408,6 @@
 				"Of Demon Slaying": false,
 				"Of Ogre Slaying": false,
 				"Of Dragon Slaying": false,
-
 				"Of Mastery (Item's attribute +1 - 20% chance while using skills)": false
 			}
 		},
@@ -427,13 +417,11 @@
 				"Fiery (Fire damage)": false,
 				"Icy (Cold damage)": false,
 				"Shocking (Lightning damage)": false,
-
 				"Barbed (Lengthens Bleeding duration on foes by 33%)": false,
 				"Cruel (Lengthens Deep Wound duration on foes by 33%)": false,
 				"Crippling (Lengthens Crippled duration on foes by 33%)": false,
 				"Poisonous (Lengthens Poison duration on foes by 33%)": false,
 				"Silencing (Lengthens Dazed duration on foes by 33%)": false,
-
 				"Furious (Double Adrenaline on hit - Chance 10%)": false,
 				"Sundering (Armor penetration +20% - Chance 20%)": false,
 				"Vampiric (Life Draining 3 Health regeneration -1)": false,
@@ -445,7 +433,6 @@
 				"Of Shelter (Armor +7 vs physical damage)": false,
 				"Of Warding (Armor +7 vs elemental damage)": false,
 				"Of Enchanting (Enchantments last 20% longer)": false,
-
 				"Of The Warrior": false,
 				"Of The Ranger": true,
 				"Of The Necromancer": true,
@@ -456,7 +443,6 @@
 				"Of The Assassin": false,
 				"Of The Paragon": false,
 				"Of The Dervish": false,
-
 				"Of Mastery (Item's attribute +1 - 20% chance while using skills)": false
 			}
 		},
@@ -466,7 +452,6 @@
 				"Of Devotion (Health +45 while Enchanted)": false,
 				"Of Endurance (Health +45 while in a Stance)": false,
 				"Of Valor (Health +60 while Hexed)": false,
-
 				"Of Aptitude (Halves casting time of item's attribute spells - Chance 20%)": true,
 				"Of Swiftness (Halves casting time of spells - Chance 10%)": false
 			}
@@ -477,10 +462,8 @@
 				"Fiery (Fire damage)": false,
 				"Icy (Cold damage)": false,
 				"Shocking (Lightning damage)": false,
-
 				"Cruel (Lengthens Deep Wound duration on foes by 33%)": false,
 				"Heavy (Lengthens Weakness duration on foes by 33%)": false,
-
 				"Furious (Double Adrenaline on hit - Chance 10%)": false,
 				"Sundering (Armor penetration +20% - Chance 20%)": false,
 				"Vampiric (Life Draining 5 Health regeneration -1)": false,
@@ -492,7 +475,6 @@
 				"Of Shelter (Armor +7 vs physical damage)": false,
 				"Of Warding (Armor +7 vs elemental damage)": false,
 				"Of Enchanting (Enchantments last 20% longer)": false,
-
 				"Of The Warrior": false,
 				"Of The Ranger": true,
 				"Of The Necromancer": true,
@@ -503,7 +485,6 @@
 				"Of The Assassin": false,
 				"Of The Paragon": false,
 				"Of The Dervish": false,
-
 				"Of Deathbane": false,
 				"Of Charrslaying": true,
 				"Of Trollslaying": true,
@@ -515,7 +496,6 @@
 				"Of Demon Slaying": false,
 				"Of Ogre Slaying": false,
 				"Of Dragon Slaying": false,
-
 				"Of Mastery (Item's attribute +1 - 20% chance while using skills)": false
 			}
 		},
@@ -525,13 +505,11 @@
 				"Fiery (Fire damage)": false,
 				"Icy (Cold damage)": false,
 				"Shocking (Lightning damage)": false,
-
 				"Barbed (Lengthens Bleeding duration on foes by 33%)": false,
 				"Cruel (Lengthens Deep Wound duration on foes by 33%)": false,
 				"Crippling (Lengthens Crippled duration on foes by 33%)": false,
 				"Heavy (Lengthens Weakness duration on foes by 33%)": false,
 				"Poisonous (Lengthens Poison duration on foes by 33%)": false,
-
 				"Furious (Double Adrenaline on hit - Chance 10%)": false,
 				"Sundering (Armor penetration +20% - Chance 20%)": true,
 				"Vampiric (Life Draining 5 Health regeneration -1)": true,
@@ -543,7 +521,6 @@
 				"Of Shelter (Armor +7 vs physical damage)": false,
 				"Of Warding (Armor +7 vs elemental damage)": false,
 				"Of Enchanting (Enchantments last 20% longer)": true,
-
 				"Of The Warrior": false,
 				"Of The Ranger": true,
 				"Of The Necromancer": true,
@@ -554,7 +531,6 @@
 				"Of The Assassin": false,
 				"Of The Paragon": false,
 				"Of The Dervish": false,
-
 				"Of Mastery (Item's attribute +1 - 20% chance while using skills)": false
 			}
 		},
@@ -572,14 +548,12 @@
 				"Fiery (Fire damage)": false,
 				"Icy (Cold damage)": false,
 				"Shocking (Lightning damage)": false,
-
 				"Barbed (Lengthens Bleeding duration on foes by 33%)": false,
 				"Cruel (Lengthens Deep Wound duration on foes by 33%)": false,
 				"Crippling (Lengthens Crippled duration on foes by 33%)": false,
 				"Heavy (Lengthens Weakness duration on foes by 33%)": false,
 				"Poisonous (Lengthens Poison duration on foes by 33%)": false,
 				"Silencing (Lengthens Dazed duration on foes by 33%)": false,
-
 				"Furious (Double Adrenaline on hit - Chance 10%)": false,
 				"Sundering (Armor penetration +20% - Chance 20%)": false,
 				"Vampiric (Life Draining 3 Health regeneration -1)": false,
@@ -591,7 +565,6 @@
 				"Of Shelter (Armor +7 vs physical damage)": false,
 				"Of Warding (Armor +7 vs elemental damage)": false,
 				"Of Enchanting (Enchantments last 20% longer)": true,
-
 				"Of The Warrior": false,
 				"Of The Ranger": true,
 				"Of The Necromancer": true,
@@ -602,7 +575,6 @@
 				"Of The Assassin": false,
 				"Of The Paragon": false,
 				"Of The Dervish": false,
-
 				"Of Mastery (Item's attribute +1 - 20% chance while using skills)": false
 			}
 		},
@@ -620,7 +592,6 @@
 				"Of Shelter (Armor +7 vs physical damage)": false,
 				"Of Warding (Armor +7 vs elemental damage)": false,
 				"Of Enchanting (Enchantments last 20% longer)": false,
-
 				"Of The Warrior": false,
 				"Of The Ranger": true,
 				"Of The Necromancer": true,
@@ -631,7 +602,6 @@
 				"Of The Assassin": false,
 				"Of The Paragon": false,
 				"Of The Dervish": false,
-
 				"Of Deathbane": false,
 				"Of Charrslaying": true,
 				"Of Trollslaying": true,
@@ -643,7 +613,6 @@
 				"Of Demon Slaying": false,
 				"Of Ogre Slaying": false,
 				"Of Dragon Slaying": false,
-
 				"Of Mastery (Item's attribute +1 - 20% chance while using skills)": false,
 				"Of Devotion (Health +45 while Enchanted)": false,
 				"Of Endurance (Health +45 while in a Stance)": false,
@@ -656,12 +625,10 @@
 				"Fiery (Fire damage)": false,
 				"Icy (Cold damage)": false,
 				"Shocking (Lightning damage)": false,
-
 				"Barbed (Lengthens Bleeding duration on foes by 33%)": false,
 				"Cruel (Lengthens Deep Wound duration on foes by 33%)": false,
 				"Crippling (Lengthens Crippled duration on foes by 33%)": false,
 				"Poisonous (Lengthens Poison duration on foes by 33%)": false,
-
 				"Furious (Double Adrenaline on hit - Chance 10%)": false,
 				"Sundering (Armor penetration +20% - Chance 20%)": false,
 				"Vampiric (Life Draining 3 Health regeneration -1)": false,
@@ -673,7 +640,6 @@
 				"Of Shelter (Armor +7 vs physical damage)": false,
 				"Of Warding (Armor +7 vs elemental damage)": false,
 				"Of Enchanting (Enchantments last 20% longer)": false,
-
 				"Of The Warrior": false,
 				"Of The Ranger": true,
 				"Of The Necromancer": true,
@@ -684,7 +650,6 @@
 				"Of The Assassin": false,
 				"Of The Paragon": false,
 				"Of The Dervish": false,
-
 				"Of Deathbane": false,
 				"Of Charrslaying": true,
 				"Of Trollslaying": true,
@@ -696,7 +661,6 @@
 				"Of Demon Slaying": false,
 				"Of Ogre Slaying": false,
 				"Of Dragon Slaying": false,
-
 				"Of Mastery (Item's attribute +1 - 20% chance while using skills)": false
 			}
 		},
@@ -704,7 +668,6 @@
 			"Suffix - Wrapping": {
 				"Of Memory (Halves skill recharge of item's attribute spells - Chance 20%)": false,
 				"Of Quickening (Halves skill recharge of spells - Chance 10%)": false,
-
 				"Of The Warrior": false,
 				"Of The Ranger": false,
 				"Of The Necromancer": true,
